--- a/index.html
+++ b/index.html
@@ -5,3 +5,18 @@
   <title>Resume</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
+<body>
+  <h1>
+    Artem Kolchyk
+  </h1>
+  <section class="contacts">
+    <h3>Contact information</h3>
+    <ul>
+      <li>Phone: +380631595123</li>
+      <li>E=mail <a href="mailto:artemkolchik@gmail.com">artemkolchik@gmail.com</a></li>
+      <li>GitHub: <a href="https://github.com/ArtemKolchyk">ArtemKolchyk</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/artemkolchyk/">Artem Kolchyk</a></li>
+    </ul>
+  </section>
+</body>
