add: add file with image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>Contact information</h3>
     <ul>
       <li>Phone: +380631595123</li>
-      <li>E=mail <a href="mailto:artemkolchik@gmail.com">artemkolchik@gmail.com</a></li>
+      <li>E-mail <a href="mailto:artemkolchik@gmail.com">artemkolchik@gmail.com</a></li>
       <li>GitHub: <a href="https://github.com/ArtemKolchyk">ArtemKolchyk</a></li>
       <li>LinkedIn: <a href="https://www.linkedin.com/in/artemkolchyk/">Artem Kolchyk</a></li>
     </ul>
