--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>
     Artem Kolchyk
   </h1>
+  <img src="Artem image for cv.jpg" alt="my photo" width="200px">
   <section class="contacts">
     <h3>Contact information</h3>
     <ul>
