add: skills info

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-  <h1>
-    Artem Kolchyk
-  </h1>
+  <header>
+    <h1>
+      Artem Kolchyk
+    </h1>
+  </header>
   <img src="Artem image for cv.jpg" alt="my photo" width="200px">
   <section class="contacts">
     <h3>Contact information</h3>
@@ -18,6 +20,18 @@
       <li>E-mail <a href="mailto:artemkolchik@gmail.com">artemkolchik@gmail.com</a></li>
       <li>GitHub: <a href="https://github.com/ArtemKolchyk">ArtemKolchyk</a></li>
       <li>LinkedIn: <a href="https://www.linkedin.com/in/artemkolchyk/">Artem Kolchyk</a></li>
+    </ul>
+  </section>
+  <section class="Summary">
+    <h3>Summary</h3>
+    <p>Solutions-oriented Mechanical Design Engineer with 7 years career experience</p>
+  </section>
+  <section>
+    <h3>Skills</h3>
+    <ul>
+      <li>Mechanical Design: Inventor, AutoCad</li>
+      <li>Team services: Teamcenter</li>
+      <li>Tools: GIT, VSCode</li>
     </ul>
   </section>
 </body>
