feat: add exp info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Artem Kolchyk
     </h1>
   </header>
-  <img src="Artem image for cv.jpg" alt="my photo" width="200px">
+  <img src="Artem image for cv1.jpg" alt="my photo" width="200px">
   <section class="contacts">
     <h3>Contact information</h3>
     <ul>
@@ -33,5 +33,15 @@
       <li>Team services: Teamcenter</li>
       <li>Tools: GIT, VSCode</li>
     </ul>
+  </section>
+  <section>
+    <h3>Experience</h3>
+    <ul>
+      <li>Danieli (2018-now)</li>
+      <p>Efficiently created 3D model of various components such as casting and sheet metal using surfacing, sheet metal and modelling environment with help of specified drawing. Assembly, drafting and detailing of components.</p>
+      <li>Gipromez (2012-2018)</li>
+      <p>Design of Roller Conveyors, Flat belt conveyors. Product design and assembly verification using CAD.</p>
+    </ul>
+    
   </section>
 </body>
