--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Resume</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,6 +16,7 @@
   <section class="contacts">
     <h3>Contact information</h3>
     <ul>
+      <li>Age: 29</li>
       <li>Phone: +380631595123</li>
       <li>E-mail <a href="mailto:artemkolchik@gmail.com">artemkolchik@gmail.com</a></li>
       <li>GitHub: <a href="https://github.com/ArtemKolchyk">ArtemKolchyk</a></li>
@@ -34,7 +35,7 @@
       <li>Tools: GIT, VSCode</li>
     </ul>
   </section>
-  <section>
+  <section class="Experience">
     <h3>Experience</h3>
     <ul>
       <li>Danieli (2018-now)</li>
@@ -42,6 +43,13 @@
       <li>Gipromez (2012-2018)</li>
       <p>Design of Roller Conveyors, Flat belt conveyors. Product design and assembly verification using CAD.</p>
     </ul>
-    
+  </section>
+  <section class="Education">
+    <h3>Education</h3>
+    <p>Ukrainian State Chemical University, Mechanical Faculty, Specialist degree (2007-2012)</p>
+  </section>
+  <section>
+    <h3>English</h3>
+    <p>B1 (Intermediate)</p>
   </section>
 </body>
