feat: add full updated styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Resume</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -12,8 +13,8 @@
       Artem Kolchyk
     </h1>
   </header>
-  <img src="Artem image for cv1.jpg" alt="my photo" width="200px">
-  <section class="contacts">
+  <img src="Artem image for cv.jpg" alt="my photo" width="180px" height="180px">
+  <section class="contacts border">
     <h3>Contact information</h3>
     <ul>
       <li>Age: 29</li>
@@ -23,28 +24,28 @@
       <li>LinkedIn: <a href="https://www.linkedin.com/in/artemkolchyk/">Artem Kolchyk</a></li>
     </ul>
   </section>
-  <section class="Summary">
+  <section class="summary border">
     <h3>Summary</h3>
     <p>Solutions-oriented Mechanical Design Engineer with 7 years career experience</p>
   </section>
-  <section>
+  <section class="skills border">
     <h3>Skills</h3>
     <ul>
-      <li>Mechanical Design: Inventor, AutoCad</li>
-      <li>Team services: Teamcenter</li>
-      <li>Tools: GIT, VSCode</li>
+      <li>Mechanical Design: <span>Inventor, AutoCad</span></li>
+      <li>Team services: <span>Teamcenter</span></li>
+      <li>Tools: <span>GIT, VSCode</span></li>
     </ul>
   </section>
-  <section class="Experience">
+  <section class="experience border">
     <h3>Experience</h3>
     <ul>
       <li>Danieli (2018-now)</li>
-      <p>Efficiently created 3D model of various components such as casting and sheet metal using surfacing, sheet metal and modelling environment with help of specified drawing. Assembly, drafting and detailing of components.</p>
+      <p>Efficiently create 3D model of various components such as casting and sheet metal using surfacing, sheet metal and modelling environment with help of specified drawing. Assemblyes, drafting and detailing of components.</p>
       <li>Gipromez (2012-2018)</li>
       <p>Design of Roller Conveyors, Flat belt conveyors. Product design and assembly verification using CAD.</p>
     </ul>
   </section>
-  <section class="Education">
+  <section class="education border">
     <h3>Education</h3>
     <p>Ukrainian State Chemical University, Mechanical Faculty, Specialist degree (2007-2012)</p>
   </section>
