fix: css style border

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h3>Education</h3>
     <p>Ukrainian State Chemical University, Mechanical Faculty, Specialist degree (2007-2012)</p>
   </section>
-  <section>
+  <section class="english border">
     <h3>English</h3>
     <p>B1 (Intermediate)</p>
   </section>
